src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

@import "tailwindcss";

@theme {
  @keyframes blob {
    0% {
      transform: scale(1);
    }
    33% {
      transform: scale(1.2);
    }
    66% {
      transform: scale(0.8);
    }
    100% {
      transform: scale(1);
    }
  }

  --animate-blob: blob 10s infinite;

  --background-image-skills-gradient:
    linear-gradient(
      38.73deg,
      rgba(204, 0, 187, 0.15) 0%,
      rgba(201, 32, 184, 0) 50%
    ),
    linear-gradient(
      141.27deg,
      rgba(0, 70, 209, 0) 50%,
      rgba(0, 70, 209, 0.15) 100%
    );
}

a {
  font-family: "Poppins", sans-serif;
}

html.lenis,
html.lenis body {
  height: auto;
}

.lenis.lenis-smooth {
  scroll-behavior: auto !important;
}

.lenis.lenis-smooth [data-lenis-prevent] {
  overscroll-behavior: contain;
}

.lenis.lenis-stopped {
  overflow: hidden;
}

.lenis.lenis-scrolling iframe {
  pointer-events: none;
}

@layer utilities {
  .clip-path-custom {
    clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 0 100%);
  }
  .clip-path-custom-2 {
    clip-path: polygon(0 0, 100% 0, 100% 98%, 25% 95%, 0 100%);
  }
  .clip-path-custom-3 {
    clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 96%, 0 100%);
  }
  .custom-scrollbar::-webkit-scrollbar {
    width: 6px;
  }
  .custom-scrollbar::-webkit-scrollbar-track {
    background: #111827;
  }
  .custom-scrollbar::-webkit-scrollbar-thumb {
    background: #8b5cf6;
    border-radius: 10px;
  }
  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
    background: #7c3aed;
  }
}

/* Hide default cursor on desktop devices to allow custom cursor */
@media (hover: hover) and (pointer: fine) {
  * {
    cursor: none !important;
  }
}

@keyframes shimmer {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.text-shimmer {
  background: linear-gradient(
    to right,
    #8245ec 10%,
    #a855f7 30%,
    #ffffff 50%,
    #a855f7 70%,
    #8245ec 90%,
    #8245ec 100%
  );
  background-size: 200% auto;
  color: transparent;
  background-clip: text;
  -webkit-background-clip: text;
  animation: shimmer 5s linear infinite;
  display: inline-block;
}

.title-shimmer {
  background: linear-gradient(
    to right,
    #ffffff 20%,
    #c084fc 40%,
    #ffffff 60%,
    #c084fc 80%,
    #ffffff 100%
  );
  background-size: 200% auto;
  color: transparent;
  background-clip: text;
  -webkit-background-clip: text;
  animation: shimmer 5s linear infinite;
  display: inline-block;
}

